--- a/Source/WPF/MyMoney/Themes/Light.xaml
+++ b/Source/WPF/MyMoney/Themes/Light.xaml
@@ -22,6 +22,9 @@
     <!-- MessageBox border -->
     <SolidColorBrush x:Key="MessageBoxBorder" Color="{m:DynamicColor SystemAccentColor}"/>
 
+    <!-- secton headers -->
+    <SolidColorBrush x:Key="SectionHeaderBorder" Color="gray"/>
+
     <!-- OFX download panel -->
     <SolidColorBrush x:Key="SyncronizingIconBrush" Color="{m:DynamicColor SystemAccentColor}"/>
     
