--- a/Source/WPF/MyMoney/View Selectors/AccountsControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/AccountsControl.xaml
@@ -12,21 +12,21 @@
     <UserControl.Resources>
 
         <DataTemplate DataType="{x:Type local:AccountSectionHeader}">
-            <Border BorderThickness="0 0 0 1" BorderBrush="Gray" Margin="0 10 0 0">
-                    <Grid>
+            <Border BorderThickness="0 0 0 1" BorderBrush="{DynamicResource SectionHeaderBorder}" Margin="0 10 0 0">
+                <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
                     <TextBlock Grid.Column="0" Text="{Binding Title}"
-                               FontSize="20"/>
+                                FontSize="20"/>
 
                     <TextBlock Grid.Column="1" Text="{Binding BalanceInNormalizedCurrencyValue, StringFormat={}{0:C}}"  
-							   HorizontalAlignment="Right" 
-                               Foreground="{Binding BalanceForeground}"
-                               />
-                    </Grid>
+							       HorizontalAlignment="Right" 
+                                   Foreground="{Binding BalanceForeground}"
+                                   />
+                </Grid>
             </Border>
         </DataTemplate>
 
