--- a/Source/WPF/MyMoney/View Selectors/AccountsControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/AccountsControl.xaml
@@ -90,6 +90,8 @@
                 <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                 <Setter Property="HorizontalAlignment" Value="Stretch"/>
                 <Setter Property="Padding" Value="10,5"/>
+                <Setter Property="AutomationProperties.AutomationId" Value="{Binding Name}">
+                </Setter>
             </Style>
         </ListBox.ItemContainerStyle>
 
