--- a/Source/WPF/MyMoney/Views/TransactionsView.xaml
+++ b/Source/WPF/MyMoney/Views/TransactionsView.xaml
@@ -35,6 +35,7 @@
             <MenuItem x:Name="MenuViewToggleSplitViews" Header="S_how All Splits" Command="views:TransactionsView.CommandViewToggleAllSplits" InputGestureText="Alt-T"  IsChecked="{Binding ViewAllSplits}"/>
             <Separator/>
             <MenuItem Name="menuItemGotoRelated" Header="_Go to related transaction" Command="views:TransactionsView.CommandGotoRelatedTransaction" InputGestureText="F12"/>
+            <MenuItem Name="menuItemGotoStatement" Header="Go to state_ment" Command="views:TransactionsView.CommandGotoStatement"/>
             <!--<MenuItem Name="menuItemViewSimilar" Header="View _Similar Transactions" Command="views:TransactionsView.CommandViewSimilarTransactions"/>-->
             <Separator/>
             <MenuItem Name="menuItemByAccount" Header="V_iew Transactions by Account" Command="views:TransactionsView.CommandViewTransactionsByAccount" InputGestureText="F8"/>
@@ -61,6 +62,7 @@
         <CommandBinding Command="views:TransactionsView.CommandSetTaxYear" Executed="OnSetTaxYear" CanExecute="CanExecute_SetTaxYear" />
 
         <CommandBinding Command="views:TransactionsView.CommandGotoRelatedTransaction" Executed="OnCommandGotoRelatedTransaction"  CanExecute="CanExecute_GotoRelatedTransaction"/>
+        <CommandBinding Command="views:TransactionsView.CommandGotoStatement" Executed="OnCommandGotoStatement" CanExecute="CanExecute_GotoStatement" />
         <CommandBinding Command="views:TransactionsView.CommandViewTransactionsByAccount" Executed="OnCommandViewTransactionsByAccount" CanExecute="CanExecute_ViewTransactionsByAccount" />
         <CommandBinding Command="views:TransactionsView.CommandViewSimilarTransactions" Executed="OnCommandViewSimilarTransactions" CanExecute="CanExecute_ViewSimilarTransactions" />
         <CommandBinding Command="views:TransactionsView.CommandViewTransactionsByCategory" Executed="OnCommandViewTransactionsByCategory" CanExecute="CanExecute_ViewTransactionsByCategory" />
