--- a/Source/WPF/MyMoney/Views/SecuritiesView.xaml
+++ b/Source/WPF/MyMoney/Views/SecuritiesView.xaml
@@ -31,6 +31,7 @@
             <Setter Property="ContentMargin" Value="0,0,0,30"/>
             <Setter Property="RowDetailsTemplate" Value="{DynamicResource StockSplitDetailView}"/>
             <Setter Property="RowHeaderWidth" Value="0"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
         </Style>
 
         <Style x:Key="MyStockSplitDataGridStyle" TargetType="DataGrid">
@@ -49,6 +50,7 @@
             <Setter Property="VirtualizingStackPanel.IsVirtualizing" Value="True"/>
             <Setter Property="VirtualizingStackPanel.VirtualizationMode" Value="Recycling"/>
             <Setter Property="RowHeaderWidth" Value="0"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
         </Style>
 
         <Style x:Key="GridComboStyle" TargetType="{x:Type ComboBox}"  BasedOn="{StaticResource DefaultComboBoxStyle}">
