--- a/Source/WPF/MyMoney/Dialogs/PickYearDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/PickYearDialog.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Walkabout.Dialogs"
         WindowStartupLocation="CenterOwner" 
         SizeToContent="Height" Width="300"
-        Title="Which Year ?"       
+        Title="Which Tax Date ?"       
         >
   <Grid Margin="10">
     <Grid.ColumnDefinitions>
@@ -18,9 +18,12 @@
       <RowDefinition Height="*"/>
       <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
-    <TextBlock Text="Please enter the year" x:Name="Prompt" TextWrapping="Wrap"/>
-    
-    <ComboBox x:Name="YearCombo" Grid.Row="1"  IsEditable="True" Margin="0,10,0,0"/>
+    <TextBlock Text="Please enter the tax date you want to use:" x:Name="Prompt" TextWrapping="Wrap"/>
+
+    <Grid Grid.Row="1" Margin="0,10,0,0" >
+      <DatePicker x:Name="TaxDatePicker" HorizontalAlignment="Left"/>
+      <Button Margin="5,0,5,0" MinWidth="50" HorizontalAlignment="Right" Click="OnRemove">Remove</Button>
+    </Grid>
     
     <StackPanel Orientation="Horizontal" Grid.Row="3"  HorizontalAlignment="Right" Margin="20">
       <Button Margin="5,0,5,0" MinWidth="50" IsDefault="True" x:Name="OK" Click="OK_Click">_Ok</Button>
