--- a/Source/WPF/MyMoney/Dialogs/PickDateDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/PickDateDialog.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Walkabout.Dialogs"
         WindowStartupLocation="CenterOwner" 
         SizeToContent="Height" Width="300"
-        Title="Which Tax Date ?"       
+        Title="Select Date"       
         >
   <Grid Margin="10">
     <Grid.ColumnDefinitions>
@@ -18,10 +18,10 @@
       <RowDefinition Height="*"/>
       <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
-    <TextBlock Text="Please enter the tax date you want to use:" x:Name="Prompt" TextWrapping="Wrap"/>
+    <TextBlock Text="Please enter a date:" x:Name="Prompt" TextWrapping="Wrap"/>
 
     <Grid Grid.Row="1" Margin="0,10,0,0" >
-      <DatePicker x:Name="TaxDatePicker" HorizontalAlignment="Left"/>
+      <DatePicker x:Name="DatePicker" HorizontalAlignment="Left"/>
       <Button Margin="5,0,5,0" MinWidth="50" HorizontalAlignment="Right" Click="OnRemove">Remove</Button>
     </Grid>
     
