--- a/Source/WPF/MyMoney/Views/TransactionsView.xaml
+++ b/Source/WPF/MyMoney/Views/TransactionsView.xaml
@@ -359,16 +359,10 @@
                     BorderBrush="{DynamicResource ListItemForegroundBrush}" BorderThickness="1" CornerRadius="5" Margin="10,-1,10,10"
                     >
                 <Border.Resources>
-
-                    <AlternationConverter x:Key="BackgroundConverter">
-                        <SolidColorBrush Color="{DynamicResource GridNormalBackgroundColor}"/>
-                        <SolidColorBrush Color="{DynamicResource GridAlternateBackgroundColor}"/>
-                    </AlternationConverter>
-
                     <Style x:Key="GridViewAlternationItemStyle" TargetType="{x:Type ListViewItem}">
                         <Setter Property="Background" 
                             Value="{Binding RelativeSource={RelativeSource Self}, Path=(ItemsControl.AlternationIndex),
-                            Converter={StaticResource BackgroundConverter}}"/>
+                            Converter={StaticResource GridBackgroundAlternationConverter}}"/>
                     </Style>
                 </Border.Resources>
                 <StackPanel Orientation="Vertical">
